# KRISPER

./: .gitignore  AUTHORSHIP.md  AUTHORSHIP_STATEMENT.md  CITATION.cff  CODEOWNERS  CONTRIBUTING.md  GITHUB_READY_CHECKLIST.md  LICENSE  PUSH_TO_GITHUB.sh  README.md  README_DEMO.md  README_detailed.md  RELEASE_NOTES.md  SECURITY.md  SHA256SUMS  __init__.py  bio_executor.py  bio_poetica.py  biopoetica_parser.py  compress_tool.py  demo.py  demo_calculator.py  demo_script.md  examples.py  install.sh  krisper.py  krisper_executor.py  krisper_lowering.py  live_demo.py  marketing_posts.md  plain_speak_compiler.py  pyproject.toml  quickstart.py  run_tests.sh  setup.py  simple_demo.py  test_bio_poetica.py  test_krisper.py  universal_krisper.md  whitespace_encoder.py  (+1 more)
.github/workflows/: tests.yml
examples/: quickstart_example.py
